Fixed image display issue
Fixed display issue where images were too wide

--- a/Beta/screen.css
+++ b/Beta/screen.css
@@ -90,6 +90,11 @@ a {
     justify-content: center;
   }
 
+  .SearchImages {
+    width: 400px;
+    height: 200px;
+  }
+
 @media screen and (min-width: 1024px) {
     h1 {
         color: darkblue;
